# nju-ap-2026-spring

./: .clang-format  .gitignore  CMakeLists.txt  GUI.md  README.md
assets/scenes/arena/: arena.mtl
src/: main.cpp
src/common/: Config.hpp  Serialization.hpp  __cpo.hpp
src/engine/: BattleEngine.hpp  Board.hpp  Coord.hpp  GameMode.hpp  GameModeCommon.hpp  GameModeController.hpp  GameSession.hpp  LanMultiplayerMode.hpp  Serialization.hpp  SinglePlayerMode.hpp
src/gui/: Button.cpp  Button.hpp  Effects.hpp  GameApp.cpp  GameApp.hpp  InputBox.cpp  InputBox.hpp
src/network/: LanConnection.hpp
src/unit/: Equipment.hpp  Synergy.hpp  Types.hpp  Unit.hpp  UnitImpl.hpp
test/: test_battle.cpp  test_board.cpp  test_coord.cpp  test_economy.cpp  test_equipment.cpp  test_gamemode.cpp  test_mp_integration.cpp  test_network.cpp  test_serialization.cpp  test_synergy.cpp  test_unit.cpp
tests/: test_equipment.cpp  test_serialization.cpp  test_unit.cpp
